// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cypress Project < v7 --linter eslint should add eslint-plugin-cypress 1`] = `
{
  "extends": [
    "plugin:cypress/recommended",
    "../../.eslintrc.json",
  ],
  "ignorePatterns": [
    "!**/*",
  ],
  "overrides": [
    {
      "files": [
        "*.ts",
        "*.tsx",
        "*.js",
        "*.jsx",
      ],
      "rules": {},
    },
    {
      "files": [
        "src/plugins/index.js",
      ],
      "rules": {
        "@typescript-eslint/no-var-requires": "off",
        "no-undef": "off",
      },
    },
  ],
}
`;

exports[`Cypress Project < v7 nested should update configuration 1`] = `
{
  "e2e": {
    "configurations": {
      "production": {
        "devServerTarget": "my-dir-my-app:serve:production",
      },
    },
    "executor": "@nx/cypress:cypress",
    "options": {
      "cypressConfig": "apps/my-dir/my-app-e2e/cypress.json",
      "devServerTarget": "my-dir-my-app:serve",
      "testingType": "e2e",
      "tsConfig": "apps/my-dir/my-app-e2e/tsconfig.json",
    },
  },
  "lint": {
    "executor": "@nx/linter:eslint",
    "options": {
      "lintFilePatterns": [
        "apps/my-dir/my-app-e2e/**/*.{js,ts}",
      ],
    },
    "outputs": [
      "{options.outputFile}",
    ],
  },
}
`;

exports[`Cypress Project < v7 project with directory in its name should set right path names in \`cypress.json\` 1`] = `
"{
  "fileServerFolder": ".",
  "fixturesFolder": "./src/fixtures",
  "integrationFolder": "./src/integration",
  "modifyObstructiveCode": false,
  "supportFile": "./src/support/index.ts",
  "pluginsFile": "./src/plugins/index",
  "video": true,
  "videosFolder": "../../../dist/cypress/apps/my-dir/my-app-e2e/videos",
  "screenshotsFolder": "../../../dist/cypress/apps/my-dir/my-app-e2e/screenshots",
  "chromeWebSecurity": false
}
"
`;

exports[`Cypress Project < v7 project with directory in its name should update configuration 1`] = `
{
  "e2e": {
    "configurations": {
      "production": {
        "devServerTarget": "my-dir-my-app:serve:production",
      },
    },
    "executor": "@nx/cypress:cypress",
    "options": {
      "cypressConfig": "apps/my-dir/my-app-e2e/cypress.json",
      "devServerTarget": "my-dir-my-app:serve",
      "testingType": "e2e",
      "tsConfig": "apps/my-dir/my-app-e2e/tsconfig.json",
    },
  },
  "lint": {
    "executor": "@nx/linter:eslint",
    "options": {
      "lintFilePatterns": [
        "apps/my-dir/my-app-e2e/**/*.{js,ts}",
      ],
    },
    "outputs": [
      "{options.outputFile}",
    ],
  },
}
`;

exports[`Cypress Project < v7 should update configuration (baseUrl) 1`] = `
{
  "e2e": {
    "executor": "@nx/cypress:cypress",
    "options": {
      "baseUrl": "http://localhost:3000",
      "cypressConfig": "apps/my-app-e2e/cypress.json",
      "testingType": "e2e",
      "tsConfig": "apps/my-app-e2e/tsconfig.json",
    },
  },
  "lint": {
    "executor": "@nx/linter:eslint",
    "options": {
      "lintFilePatterns": [
        "apps/my-app-e2e/**/*.{js,ts}",
      ],
    },
    "outputs": [
      "{options.outputFile}",
    ],
  },
}
`;

exports[`Cypress Project < v7 should update configuration 1`] = `
{
  "e2e": {
    "configurations": {
      "production": {
        "devServerTarget": "my-app:serve:production",
      },
    },
    "executor": "@nx/cypress:cypress",
    "options": {
      "cypressConfig": "apps/my-app-e2e/cypress.json",
      "devServerTarget": "my-app:serve",
      "testingType": "e2e",
      "tsConfig": "apps/my-app-e2e/tsconfig.json",
    },
  },
  "lint": {
    "executor": "@nx/linter:eslint",
    "options": {
      "lintFilePatterns": [
        "apps/my-app-e2e/**/*.{js,ts}",
      ],
    },
    "outputs": [
      "{options.outputFile}",
    ],
  },
}
`;

exports[`Cypress Project < v7 should update configuration 2`] = `
{
  "e2e": {
    "configurations": {
      "production": {
        "devServerTarget": "my-app:serve:production",
      },
    },
    "executor": "@nx/cypress:cypress",
    "options": {
      "cypressConfig": "apps/my-app-e2e/cypress.json",
      "devServerTarget": "my-app:serve:development",
      "testingType": "e2e",
      "tsConfig": "apps/my-app-e2e/tsconfig.json",
    },
  },
  "lint": {
    "executor": "@nx/linter:eslint",
    "options": {
      "lintFilePatterns": [
        "apps/my-app-e2e/**/*.{js,ts}",
      ],
    },
    "outputs": [
      "{options.outputFile}",
    ],
  },
}
`;

exports[`Cypress Project > v10 for bundler:vite should pass the bundler info to nxE2EPreset in \`cypress.config.ts\` 1`] = `
"import { defineConfig } from 'cypress';
import { nxE2EPreset } from '@nx/cypress/plugins/cypress-preset';

export default defineConfig({
  e2e: nxE2EPreset(__dirname, {
    bundler: 'vite',
  }),
});
"
`;

exports[`Cypress Project > v10 nested should set right path names in \`cypress.config.ts\` 1`] = `
"import { defineConfig } from 'cypress';
import { nxE2EPreset } from '@nx/cypress/plugins/cypress-preset';

export default defineConfig({
  e2e: nxE2EPreset(__dirname),
});
"
`;

exports[`Cypress Project > v10 nested should set right path names in \`tsconfig.e2e.json\` 1`] = `
{
  "compilerOptions": {
    "allowJs": true,
    "outDir": "../../../dist/out-tsc",
    "sourceMap": false,
    "types": [
      "cypress",
      "node",
    ],
  },
  "extends": "../../../tsconfig.base.json",
  "include": [
    "src/**/*.ts",
    "src/**/*.js",
    "cypress.config.ts",
  ],
}
`;

exports[`Cypress Project > v10 should set right path names in \`cypress.config.ts\` 1`] = `
"import { defineConfig } from 'cypress';
import { nxE2EPreset } from '@nx/cypress/plugins/cypress-preset';

export default defineConfig({
  e2e: nxE2EPreset(__dirname),
});
"
`;

exports[`Cypress Project > v10 should set right path names in \`tsconfig.e2e.json\` 1`] = `
{
  "compilerOptions": {
    "allowJs": true,
    "outDir": "../../dist/out-tsc",
    "sourceMap": false,
    "types": [
      "cypress",
      "node",
    ],
  },
  "extends": "../../tsconfig.base.json",
  "include": [
    "src/**/*.ts",
    "src/**/*.js",
    "cypress.config.ts",
  ],
}
`;

exports[`Cypress Project > v10 should update configuration when eslint is passed 1`] = `
{
  "executor": "@nx/linter:eslint",
  "options": {
    "lintFilePatterns": [
      "apps/my-app-e2e/**/*.{js,ts}",
    ],
  },
  "outputs": [
    "{options.outputFile}",
  ],
}
`;
